Fix default value

--- a/web-resume.html
+++ b/web-resume.html
@@ -220,13 +220,13 @@
 <script src="./resume.js"></script>
 <script>
 	Polymer('web-resume', {
-		name: 'Your name',
+		name: 'Your Name',
 		alias: 'your-alias',
-		avatar: '/path/to/your/avatar',
-		email: 'Your email address',
-		phone: 'Your phone number',
-		site: 'Your site url',
-		country: 'Your country',
+		avatar: null,
+		email: 'example@domain.com',
+		phone: '+1 234 56789',
+		site: 'http://example.com',
+		country: 'Your Country',
 		skills: null,
 		educations: null,
 		works: null,
