--- a/web-resume.html
+++ b/web-resume.html
@@ -44,45 +44,10 @@
 			color: #666;
 		}
 
-		.contact a, .contact:before {
+		.contact-value, .contact-icon {
 			display: inline-block;
 			line-height: 30px;
 			vertical-align: middle;
-		}
-
-		.contact:before {
-			color: #bbb;
-			font-family: 'Ionicons';
-			font-size: 20px;
-			width: 20px;
-			text-align: center;
-			margin-right: .5em;
-			speak: none;
-			font-style: normal;
-			font-weight: normal;
-			font-variant: normal;
-			text-transform: none;
-			text-rendering: auto;
-			-webkit-font-smoothing: antialiased;
-			-moz-osx-font-smoothing: grayscale;
-		}
-
-		.contact-email:before {
-			content: "\f10f";
-			font-size: 16px;
-		}
-
-		.contact-phone:before {
-			content: "\f1fa";
-		}
-
-		.contact-site:before {
-			content: "\f271";
-		}
-
-		.contact-country:before {
-			content: "\f276";
-			font-size: 16px;
 		}
 
 		.main {
@@ -104,7 +69,7 @@
 			padding: 1em;
 		}
 
-		.education:not(:last-child) {			
+		.education:not(:last-child) {
 			border-bottom: 1px dotted #ddd;
 		}
 
@@ -112,7 +77,7 @@
 			color: #999;
 		}
 
-		.work {			
+		.work {
 			font-size: 12px;
 		}
 
@@ -191,25 +156,46 @@
 				<h1 class="my-name">{{name}}</h1>
 				<span class="my-alias">{{alias}}</span>
 				<ul class="my-contact">
-					<li class="contact contact-email"><a href="mailto:{{email}}">{{email}}</a></li>
-					<li class="contact contact-phone">{{phone}}</li>
-					<li class="contact contact-site"><a href="{{site}}">{{site}}</a></li>
-					<li class="contact contact-country">{{country}}</li>
+					<li class="contact">
+						<span class="icon contact-icon contact-email-icon"></span>
+						<a class="contact-value" href="mailto:{{email}}">{{email}}</a>
+					</li>
+					<li class="contact">
+						<span class="icon contact-icon contact-phone-icon"></span>
+						<span class="contact-value">{{phone}}</span>
+					</li>
+					<li class="contact">
+						<span class="contact-icon contact-site-icon"></span>
+						<a class="contact-value" href="{{site}}">{{site}}</a>
+					</li>
+					<li class="contact">
+						<span class="icon contact-icon contact-country-icon"></span>
+						<span class="contact-value">{{country}}</span>
+					</li>
 				</ul>
 			</div>
 			<div class="main">
 				<section id="educations" class="educations" data-educations-path="{{educations}}">
-					<h2>Educations</h2>
+					<div class="section-header">
+						<span class="icon section-title-icon title-education-icon"></span>
+						<h2 class="section-title">Educations</h2>
+					</div>
 					<ul class="resume-list-placeholder" id="educations-placeholder"></ul>
 				</section>
 
 				<section id="works" class="works" data-works-path="{{works}}">
-					<h2>Work Experiences</h2>
+					<div class="section-header">
+						<span class="icon section-title-icon title-work-icon"></span>
+						<h2 class="section-title">Work Experiences</h2>
+					</div>
 					<ul class="resume-list-placeholder" id="works-placeholder"></ul>
 				</section>
 
 				<section id="skills" class="skills" data-skills-path="{{skills}}">
-					<h2>Skills</h2>
+					<div class="section-header">
+						<span class="icon section-title-icon title-skill-icon"></span>
+						<h2 class="section-title">Skills</h2>
+					</div>
 					<ul id="skills-placeholder"></ul>
 				</section>
 			</div>
