Fix styling for icon and text

--- a/web-resume.html
+++ b/web-resume.html
@@ -55,6 +55,10 @@
 			padding: 20px;
 		}
 
+		.section-title {
+			display: inline-block;
+		}
+
 		.resume-list-placeholder {
 			padding: 0;
 			list-style: none;
@@ -165,7 +169,7 @@
 						<span class="contact-value">{{phone}}</span>
 					</li>
 					<li class="contact">
-						<span class="contact-icon contact-site-icon"></span>
+						<span class="icon contact-icon contact-site-icon"></span>
 						<a class="contact-value" href="{{site}}">{{site}}</a>
 					</li>
 					<li class="contact">
