Fix margin on section header

--- a/web-resume.html
+++ b/web-resume.html
@@ -55,12 +55,19 @@
 			padding: 20px;
 		}
 
+		.section-header {
+			margin-bottom: 1em;
+		}
+
 		.section-title {
 			display: inline-block;
+			/* prevent duplicate margin from .section-header */
+			margin-bottom: 0;
 		}
 
 		.resume-list-placeholder {
 			padding: 0;
+			margin: 0;
 			list-style: none;
 			border: 1px solid #ddd;
 			border-radius: 5px;
