Remove text-decoration style on work-tasks-button

--- a/resume/works.html
+++ b/resume/works.html
@@ -37,6 +37,7 @@
             .work-tasks-button {
                 position: absolute;
                 cursor: pointer !important;
+                text-decoration: none !important
             }
 
             .work-tasks {
