Forgot to add attributes in resume-table

--- a/resume/resume-table.html
+++ b/resume/resume-table.html
@@ -1,5 +1,5 @@
-<polymer-element name="resume-table" attributes="data">
-  <template>
+<polymer-element name="resume-table" attributes="title, data">
+  <template id="resumeTable">
     <style type="text/css">
 
       resume-table {
