--- a/resume/resume-table.html
+++ b/resume/resume-table.html
@@ -1,5 +1,5 @@
-<polymer-element name="resume-table" attributes="title, data">
-  <template id="resumeTable">
+<polymer-element name="resume-table">
+  <template>
     <style type="text/css">
       resume-table {
         display: block;
