Simple <resume-skill> element #1
Need improvement, but haven't found idea how the layout will looks

--- a/web-resume.html
+++ b/web-resume.html
@@ -3,6 +3,7 @@
 <link rel="import" href="./resume/resume-table.html">
 <link rel="import" href="./resume/resume-education.html">
 <link rel="import" href="./resume/resume-experience.html">
+<link rel="import" href="./resume/resume-skill.html">
 
 <polymer-element name="web-resume">
   <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700' rel='stylesheet' type='text/css'>
