--- a/demo.html
+++ b/demo.html
@@ -17,6 +17,7 @@
     <resume-personal name="John Quark" address="17 Isotron Ave, CA" phone="+1 221 5532" email="hi@qua.rk"></resume-personal>
     <resume-experience cache="false" source="/samples/experiences.json"></resume-experience>
     <resume-education cache="false" source="/samples/educations.json"></resume-education>
+    <resume-skill cache="false" source="/samples/skills.json"></resume-skill>
   </web-resume>
   <script src="/bower_components/jquery/dist/jquery.min.js"></script>
 </body>
