--- a/resume/resume-skill.html
+++ b/resume/resume-skill.html
@@ -27,21 +27,16 @@
 
         var self = this;
 
-        var request = $.ajax({
-          type: 'GET',
-          url: this.source,
-          dataType: 'json',
-          cache: this.cache == "true"
-        });
+        superagent.get(this.source).end(function (err, res) {
+          if (err) {
+            console.log('Failed to load skills:', err);
+            return;
+          }
 
-        request.done(function (data) {
+          var data = JSON.parse(res.text);
           data.forEach(function (skill) {
             self.skills.push(skill);
           });
-        });
-
-        request.fail(function (e) {
-          console.log('Failed to load skills:', e);
         });
       }
     });
