--- a/web-resume.html
+++ b/web-resume.html
@@ -1,3 +1,4 @@
+<script src="/bower_components/superagent/superagent.js"></script>
 <link rel="import" href="./bower_components/polymer/polymer.html">
 <link rel="import" href="./resume/resume-personal.html">
 <link rel="import" href="./resume/resume-table.html">
