Move setter to created method

--- a/resume/resume-education.html
+++ b/resume/resume-education.html
@@ -2,10 +2,11 @@
   <template><shadow></shadow></template>
   <script>
     Polymer('resume-education', {
-      ready: function () {
+      created: function () {
         this.data = [];
         this.title = 'Educations';
-
+      },
+      ready: function () {
         var self = this;
 
         superagent.get(this.source).end(function (err, res) {
