--- a/web-resume.html
+++ b/web-resume.html
@@ -16,7 +16,8 @@
       font-family: 'Source Sans Pro', sans-serif;
       width: 90%;
       max-width: 860px;
-      margin: auto;
+      margin-left: auto;
+      margin-right: auto;
       display: block;
     }
   </style>
