--- a/web-resume.html
+++ b/web-resume.html
@@ -1,6 +1,6 @@
 <!-- Dependencies -->
-<script src="/bower_components/superagent/superagent.js"></script>
-<link rel="import" href="/bower_components/polymer/polymer.html">
+<script src="../superagent/superagent.js"></script>
+<link rel="import" href="../polymer/polymer.html">
 
 <!-- Modules -->
 <link rel="import" href="./resume/resume-personal.html">
